src/styles.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  font-family: "Open Sans", sans-serif;
}

h1 {
  text-align: center;
  padding: 1rem;
}

.display {
  display: flex;
  justify-content: center;
}

/* weather search form */
#weather-form {
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: center;
}

#weather-loc-field {
  margin-right: 1rem;
  padding: 0.08rem;
}

#weather-search-btn {
  padding: 0.05rem 0.5rem;
}

/* display box */
.display {
  display: flex; /* block-level flex */
  flex-direction: column;
  text-align: center;
  padding: 1rem;
  min-height: 100px;
  min-width: 100px;
  border: 1px solid black;

  /* shrink to content */
  width: fit-content;
  margin: 1rem auto; /* centers horizontally */
}

.location-time {
  display: flex;
  gap: 1.5rem;
  padding-bottom: 1rem;
}

.time {
  margin-left: auto;
}

.location-time,
.description {
  font-weight: bold;
}

.icon-desc {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.other-details {
  display: flex;
  flex-direction: column;
  margin-top: 1rem;
  gap: 0.2rem;
  align-items: flex-start;
}

.error-msg {
  display: block;
  margin-top: 0.5rem;
  color: red;
}

.div > *:not(.time) {
  margin: 1rem;
  display: flex;
  justify-content: center;
}

.time {
  display: flex;
  justify-content: center;
}

.icon img {
  width: 100px;
  height: 100px;
}

